<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cpp_mypubsub</name>
  <version>0.0.0</version>
  <description>My Pub Sub</description>
  <maintainer email="zivlowenhao@gmail.com">ziv</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>tutorial_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
